2009-06-02  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Updated the documentation (version change, Russian
	language addition and documentation of the WOApplicationRedirectURL
	parameter)

2009-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailFolderActions.m (-deleteFolderAction):
	renamed to deleteAction to match the methods in UI/Common/*Actions.m

	* UI/Common/UIxFolderActions.m (-): removed useless method since
	SOGoFolders can use the "delete" web method to achieve the same result.

	* SoObjects/SOGo/SOGoPermissions.m: declared new "Delete Object"
	permission.

2009-06-01  Cyril Robert <crobert@inverse.ca>

	* UI/WebServerResources/UIxContactsUserFolders.js (onSearchFormSubmit): 
	Fixed encoding issue/crash.

2009-05-30  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Modified SOGoCalendarComponent.m so that we
	explicitely add the MIME-Version header when
	sending out invitation messages.

2009-05-23  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Added Russian tranlation - patch from
	Alex Kabakaev <lists@kas.tomsk.ru>

2009-05-22  Francis Lachapelle  <flachapelle@inverse.ca>

	* Main/sogod.m (main): verify if the default parameter
	WOApplicationRedirectURL is defined and if so, removed any
	trailing slash.

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-_toolbarForOwner:andClientObject:]): ignore the participation
	status for tasks so the usual edition toolbar appears.

2009-05-21  Ludovic Marcotte <lmarcotte@inverse.ca>

	* Regenerated the SOPE patchset so we now correctly
	support the windows-1251 charset
	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	We now correctly support the koi8-r and windows-1251
	encodings when decoding HTML mails.

2009-05-19  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount
	-allFolderPaths]): if the user default "showSubscribedFoldersOnly"
	is not defined for the user, use the application default
	"SOGoMailShowSubscribedFoldersOnly".
