@@ -1,3 +1,8 @@
+2009-06-02  Cyril Robert <crobert@inverse.ca>
+
+	* SoObjects/Appointments/SOGoAppointmentFolder.m (_enforceTimeLimitOnFilter):
+	Rewrote algorithm.
+
 2009-06-02  Ludovic Marcotte <lmarcotte@inverse.ca>
 
 	* Updated the documentation (version change, Russian
@@ -19,6 +24,10 @@
 
 	* UI/WebServerResources/UIxContactsUserFolders.js (onSearchFormSubmit): 
 	Fixed encoding issue/crash.
+	* SoObjects/Appointments/SOGoAppointmentFolder.m (_parseCalendarFilter): 
+	Added support for default SOGoDAVCalendarStartTimeLimit, which is the
+	maximum number of days for dav queries.
+	Added: _enforceTimeLimitOnFilter, _getMaxStartDate and _getStartTimeLimit
 
 2009-05-30  Ludovic Marcotte <lmarcotte@inverse.ca>
 
